--- a/WooCommerce/Resources/en.lproj/Localizable.strings
+++ b/WooCommerce/Resources/en.lproj/Localizable.strings
@@ -55,6 +55,9 @@
 /* Approve a comment */
 "Approve" = "Approve";
 
+/* Notification status description for 'approved' */
+"approved" = "approved";
+
 /* Unapprove a comment */
 "Approved" = "Approved";
 
@@ -156,6 +159,12 @@
 /* Error message informing the user that there was a problem unsubscribing to a site or feed. */
 "Could not unfollow the site at the address specified." = "Could not unfollow the site at the address specified.";
 
+/* Error message shown a URL points to a valid site but not a WordPress site. */
+"Couldn't connect to the WordPress site. There is no valid WordPress site at this address. Check the site address (URL) you entered." = "Couldn't connect to the WordPress site. There is no valid WordPress site at this address. Check the site address (URL) you entered.";
+
+/* Message to show to user when he tries to add a self-hosted site with RSD link present, but xmlrpc is missing. */
+"Couldn't connect. Required XML-RPC methods are missing on the server." = "Couldn't connect. Required XML-RPC methods are missing on the server.";
+
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 403 error, meaning that the access to the /xmlrpc.php file is forbidden. */
 "Couldn't connect. We received a 403 error when trying to access your site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "Couldn't connect. We received a 403 error when trying to access your site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem.";
 
@@ -175,9 +184,6 @@
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "Days";
-
-/* Deleted Notification's Title */
-"Deleted Notification!" = "Deleted Notification!";
 
 /* Order Notice */
 "Deleted: Order #\(viewModel.order.number)" = "Deleted: Order #\(viewModel.order.number)";
@@ -459,9 +465,25 @@
 /* Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "No results for the selected criteria";
 
+/* Notification status description for 'unspam' (opposite of spam) */
+"not spam" = "not spam";
+
+/* Notification status description for 'untrash' (opposite of trash) */
+"not trash" = "not trash";
+
 /* Labels an order note to let user know it's visible to the customer
    Spoken accessibility label for an icon image that indicates it's a note to the customer. */
 "Note to customer" = "Note to customer";
+
+/* Deleted Notification's Title
+   Notification notice title */
+"Notification" = "Notification";
+
+/* Notification error notice title */
+"Notification Error" = "Notification Error";
+
+/* Notification moderation success notice message */
+"Notification marked as %@" = "Notification marked as %@";
 
 /* Notifications tab title
    Notifications title */
@@ -722,6 +744,9 @@
 /* Verb, spam a comment */
 "Spam" = "Spam";
 
+/* Notification status description for 'spam' */
+"spam" = "spam";
+
 /* VoiceOver accessibility value, informs the user about the X-axis min/max values. It reads: Starting date {date}, ending date {date}. */
 "Starting period %@, ending period %@" = "Starting period %1$@, ending period %2$@";
 
@@ -777,7 +802,7 @@
 "The Google account \"\(loginFields.username)\" doesn't match any account on WordPress.com" = "The Google account \"\(loginFields.username)\" doesn't match any account on WordPress.com";
 
 /* Displayed whenever a Notification that was onscreen got deleted. */
-"The notification has been removed!" = "The notification has been removed!";
+"The notification has been removed" = "The notification has been removed";
 
 /* Fetching an Order Failed */
 "The Order couldn't be loaded!" = "The Order couldn't be loaded!";
@@ -861,6 +886,9 @@
 /* Move a comment to the trash */
 "Trash" = "Trash";
 
+/* Notification status description for 'trash' */
+"trash" = "trash";
+
 /* Connect when the SSL certificate is invalid */
 "Trust" = "Trust";
 
@@ -879,6 +907,9 @@
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "Unable to find WooCommerce stores connected to this account";
 
+/* Notification error notice message */
+"Unable to mark the notification as %@" = "Unable to mark the notification as %@";
+
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ.";
 
@@ -887,6 +918,9 @@
 
 /* Error message displayed when an error occurred checking for email availability. */
 "Unable to verify the email address. Please try again later." = "Unable to verify the email address. Please try again later.";
+
+/* Notification status description for 'unapproved' */
+"unapproved" = "unapproved";
 
 /* Unapproves a comment. Spoken Hint. */
 "Unapproves the comment" = "Unapproves the comment";
@@ -951,9 +985,6 @@
 
 /* Error message shown when having trouble connecting to a Jetpack site. */
 "We're not able to connect to the Jetpack site at that URL.  Contact us for assistance." = "We're not able to connect to the Jetpack site at that URL.  Contact us for assistance.";
-
-/* Error message shown a URL points to a valid site but not a WordPress site. */
-"We're sure this is a great site - but it's not a WordPress site, so you can't connect to it with this app." = "We're sure this is a great site - but it's not a WordPress site, so you can't connect to it with this app.";
 
 /* Statistical unit - a single week */
 "Week" = "Week";
